# kicad-source-mirror

./: CMakeLists.txt  _clang-format
proto/: CMakeLists.txt  README.md  board.proto  common.proto  eeschema.proto  footprint.proto  proto_test.cpp  schematic.proto  symbol.proto
qa/testcases/: test_002_board_class.py
